# sol-tx-aggregator

./: Cargo.toml  README.md
src/: aggregator.rs  api.rs  lib.rs  main.rs  models.rs
src/application/: aggregator.rs  app.rs  mod.rs
src/domain/: errors.rs  models.rs
src/infrastructure/: bc_client.rs  channel_notifier.rs  memory.rs  mod.rs  shutdown.rs  solana_client.rs
src/service/: api.rs
