[package]
name = "sol-tx-aggregator"
version = "0.1.0"
edition = "2021"
authors = ["Juan Royo Sales <juanpablo.royo@gmail.com>"]
description = "Solana transaction aggregator example"

[dependencies]
anyhow = "1.0.90"
axum = "0.7.7"
chrono = "0.4.38"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.101"
tokio = { version = "1.30.0", features = ["full"] }
tonic = "0.12"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.1"
yellowstone-grpc-client = "1.14.2"
yellowstone-grpc-proto = "1.14.2"

[dev-dependencies]
tokio-test = "0.4.0"
