[package]
name = "sol-tx-aggregator"
version = "0.1.0"
edition = "2021"
authors = ["Juan Royo Sales <juanpablo.royo@gmail.com>"]
description = "Solana transaction aggregator example"

[dependencies]
anyhow = "1.0.90"
axum = "0.7.7"
bincode = "1.3.3"
crossbeam-channel = "0.5.10"
futures = "0.3.31"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.101"
solana-client = "2.0.6"
solana-sdk = "2.0.6"
solana-transaction-status = "2.0.6"
spl-token = "4.0.1"
tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.1"

[dev-dependencies]
tokio-test = "0.4.0"
